--- a/curso/1_HTML_CSS/3_CSS/css/style.css
+++ b/curso/1_HTML_CSS/3_CSS/css/style.css
@@ -1,12 +1,242 @@
 /* 4 External */
-body{
+body {
     padding-bottom: 500px;
+    background-color: #202020;
 }
 
-h3{
+h3 {
     color: green;
 }
 
-p{
+p {
     color: blueviolet;
+}
+
+
+/* Classes */
+.paragraph {
+    background-color: black;
+    color: aqua;
+    padding: 15px;
+}
+
+/* Ids */
+#exclusive-id {
+    background-color: purple;
+    color: yellow;
+    padding: 15px;
+}
+
+/* Ordem CSS */
+h2 {
+    border-bottom: 2px solid red;
+}
+
+.titulo {
+    border-bottom: 3px solid blue;
+}
+
+#algum-titulo {
+    border-bottom: 4px solid green;
+}
+
+/* Cores */
+.color-name {
+    color: crimson;
+}
+
+.hex {
+    color: #55a398;
+}
+
+#hex-2 {
+    color: #03b90f;
+}
+
+/* Hex simplificado */
+.simple-hex {
+    color: #444; /* = #444444 */
+}
+
+#simple-hex2 {
+    color: #0bf; /* = #00bbff */
+}
+
+/* RGB */
+.rgb {
+    color: rgb(255, 0, 0);
+}
+
+#mixed-rgb {
+    color: rgb(250, 5, 103);
+}
+
+/* RGBA */
+.rgba { 
+    color: rgb(20, 200, 57, 0.4);
+}
+
+#rgba2 {
+    color: rgb(200, 20, 78, 0.1);
+}
+
+/* HSL */
+.hsl {
+    color: hsl(200, 40%, 20%);
+}
+
+#hsl2 {
+    color: hsl(210, 10%, 60%);
+}
+
+/* Background-color */
+.bg {
+    background-color: #000;
+    color: yellow;
+}
+
+#bg-2 {
+    background-color: #f00;
+    color: #00eaff;
+}
+
+/* BG Opacity */
+.bg-opacity {
+    background-color: #03b90f;
+    opacity: 0.2;
+}
+
+.bg-opacity-2 {
+    background-color: #999;
+    opacity: 0.8;
+}
+
+.bg-opacity-2>p {
+    color: #000;
+}
+
+/* rgba com opacidade */
+.rgba-opacity {
+    background-color: rgba(90, 120, 20, 0.2);
+    color: #000;
+}
+
+/* BG Image */
+.bg-image {
+    background-image: url("../img/imagem-1.jpg");
+    padding: 10px;
+    color: #fff;
+}
+
+/* Centralizando img de bg */
+.not-centered-bg,
+.centered-bg {
+    height: 400px;
+    width: 400px;
+    background-image: url("../img/imagem-2.jpg");
+    margin: 10px;
+}
+
+.centered-bg {
+    background-position: center;
+    background-size: cover;
+}
+
+/* Largura e altura */
+.height-width {
+    height: 100px;
+    width: 300px;
+    margin-bottom: 10px;
+    background-color: #f00;
+}
+
+.height-width-2 {
+    height: 200px;
+    margin-bottom: 10px;
+    background-color: #03b90f;
+}
+
+/* Padding */
+.without-padding,
+.padding {
+    color: #fff;
+}
+
+.without-padding {
+    background-color: #000;
+}
+
+.padding {
+    padding: 10px;
+    margin-top: 5px;
+    background-color: #333;
+}
+
+/* Shorthand padding */
+.shorthand-padding-2 {
+    background-color: #555;
+    padding: 10px 20px;
+
+    /* Acima teriamos o equivalente ao 
+    padding: 10px 20px 10px 20px */
+}
+
+/* Border-box */
+.without-border-box {
+    background-color: #BD00FF;
+    color: #fff;
+    width: 400px;
+    padding: 50px;
+}
+
+.border-box {
+    background-color: #59186F;
+    color: #fff;
+    width: 400px;
+    padding: 50px;
+    box-sizing: border-box;
+}
+
+/* Borda */
+.border,
+.border-2 {
+    margin-top: 5px;
+    color: #fff;
+}
+
+.border {
+    border: 5px solid #F90570;
+    padding: 10px;
+}
+
+.border-2 {
+    border: 2px dotted #19B3D5;
+    padding: 20px;
+}
+
+/* Borda arredondada */
+.rounded-p {
+    border: 4px solid blue;
+    border-radius: 15px;
+    background-color: #000;
+    color: blue;
+    padding: 10px;
+}
+
+.rounded-p-2 {
+    
+    border-radius: 25px;
+    background-color: #000;
+    color: blue;
+    padding: 10px;
+}
+
+/* Box-model */
+.box-model {
+    margin: 20px;
+    padding: 15px 25px;
+    border: 3px solid #845;
+    border-radius: 10px;
+    width: 200px;
+    height: 300px;
 }
